--- a/other-service.html
+++ b/other-service.html
@@ -1,21 +1,41 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
+  <!--
+    [HEAD：基本設定與 RWD]
+    - lang="zh-Hant"：主要語系為繁體中文。
+    - <meta charset="UTF-8">：避免中文亂碼。
+    - <meta name="viewport">：手機裝置以裝置寬度呈現；初始縮放 1.0。
+    - <title>：頁籤標題與搜尋結果標題。
+  -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>【其他清洗服務】｜自然大叔</title>
+
   <style>
+    /* =========================================================
+       主題 Token（淺/深色）
+       - 以 CSS 變數集中管理顏色；深色模式用 body.dark-mode 覆蓋。
+       ========================================================= */
     :root {
-      --bg: #ffffff;
-      --text: #000000;
-      --primary: #2563eb; /* ✅ 改新版標題藍 */
+      --bg: #ffffff;         /* 頁面背景（淺） */
+      --text: #000000;       /* 主要文字（淺） */
+      --primary: #2563eb;    /* 標題/按鈕主色（淺） */
+      --card-border: #ccc;   /* 卡片與欄位邊框（淺） */
+      --field-bg: #ffffff;   /* 欄位背景（淺） */
     }
     body.dark-mode {
-      --bg: #121212;
-      --text: #f5f5f5;
-      --primary: #3b82f6; /* ✅ 深色模式藍 */
+      --bg: #121212;         /* 頁面背景（深） */
+      --text: #f5f5f5;       /* 主要文字（深） */
+      --primary: #3b82f6;    /* 標題/按鈕主色（深） */
+      --card-border: #555;   /* 卡片與欄位邊框（深） */
+      --field-bg: #1a1a1a;   /* 欄位背景（深） */
     }
 
+    /* =========================================================
+       全域基礎樣式
+       - 採用主題變數；加上過場提升主題切換體驗。
+       ========================================================= */
     body {
       font-family: Arial, sans-serif;
       line-height: 1.6;
@@ -26,10 +46,13 @@
       transition: background 0.3s, color 0.3s;
     }
 
-    /* ✅ 頂部標題區塊，統一 bulk-booking 風格 */
+    /* =========================================================
+       頂部標題區塊（與 bulk-booking 風格統一）
+       - 深色模式覆蓋底色與邊線。
+       ========================================================= */
     .page-header {
-      background: #f3f4f6; /* 灰底 */
-      border-bottom: 1px solid #d1d5db;
+      background: #f3f4f6;              /* 灰底（淺） */
+      border-bottom: 1px solid #d1d5db; /* 底線（淺） */
       padding: 30px 20px;
       text-align: center;
     }
@@ -37,26 +60,39 @@
       margin: 0;
       font-size: 2rem;
       font-weight: bold;
-      color: var(--primary);
+      color: var(--primary);            /* 使用主色 */
     }
     body.dark-mode .page-header {
-      background: #1f2937;
-      border-bottom: 1px solid #374151;
+      background: #1f2937;              /* 灰藍底（深） */
+      border-bottom: 1px solid #374151; /* 底線（深） */
     }
 
+    /* =========================================================
+       內容容器
+       - 最大寬度 900px、置中、保留適當邊距。
+       ========================================================= */
     .container {
       padding: 20px;
       max-width: 900px;
       margin: auto;
     }
+
+    /* 區塊標題：使用主題主色 */
     h2 {
       color: var(--primary);
       margin-top: 20px;
     }
+
+    /* label：整行可點提升可用性 */
     label {
       display: block;
       margin: 6px 0;
     }
+
+    /* =========================================================
+       導覽按鈕列
+       - 左右分散對齊；hover 微回饋。
+       ========================================================= */
     .nav-buttons {
       display: flex;
       justify-content: space-between;
@@ -73,37 +109,64 @@
     .nav-buttons a:hover {
       opacity: 0.85;
     }
+
+    /* =========================================================
+       服務卡片
+       - 邊框 + 圓角 + 淡色背景，讓區塊有層次。
+       - 注意：此處 padding 會決定卡片內容左右的「內距基準」。
+       ========================================================= */
     .service-box {
-      border: 1px solid #ccc;
+      border: 1px solid var(--card-border);
       border-radius: 8px;
-      padding: 15px;
+      padding: 15px;                 /* 卡片內距 → 影響內文左右起點 */
       margin-bottom: 20px;
-      background: rgba(0,0,0,0.02);
+      background: rgba(0,0,0,0.02);  /* 非常淺底（深色模式下仍可接受） */
     }
     .service-box h3 {
       margin-top: 0;
       color: var(--primary);
     }
+
+    /* =========================================================
+       「其他原因」文字輸入框（textarea）
+       ✅ 重要修正：寬度與卡片左右對齊
+       - 舊：width: calc(100% - 20px) + margin: 10px（會導致左右縮進不一致）
+       - 新：width: 100% + box-sizing: border-box + 上下外距（不加左右外距）
+         → 讓文字框左/右邊緣與卡片內文完全一致（由 .service-box 的 padding 控制）
+       ========================================================= */
     textarea {
-      width: calc(100% - 20px);
+      width: 100%;                  /* 佔滿卡片可用寬度（含 padding 內部） */
+      box-sizing: border-box;       /* 將 padding 與 border 納入寬度計算，避免溢出 */
       min-height: 100px;
-      padding: 8px;
-      border: 1px solid #ccc;
+      padding: 10px 12px;           /* 欄位內距，讓內容不貼邊 */
+      border: 1px solid var(--card-border);
       border-radius: 6px;
-      resize: vertical;
+      resize: vertical;             /* 允許使用者垂直拉伸 */
       font-size: 1rem;
-      margin: 10px;
-      display: none; /* ✅ 預設隱藏 */
+      margin: 10px 0 0 0;           /* ✅ 僅「上外距 10px」，不設左右外距，左右由卡片 padding 控制 */
+      display: none;                /* 預設隱藏 → 勾選「其他」時顯示（JS 控制） */
+      background: var(--field-bg);  /* 依主題變數顯示欄位背景 */
+      color: inherit;               /* 跟隨主題文字色 */
     }
+
+    /* 補充：可依需求微調手機樣式；此頁以簡潔為主，省略更細項 RWD。 */
   </style>
 </head>
 <body>
-  <!-- ✅ 頂部標題區塊 -->
+  <!--
+    [頂部標題區塊]
+    - 呈現頁面主題；與站內其它頁保持一致視覺。
+  -->
   <div class="page-header">
     <h1>其他清洗｜自然大叔</h1>
   </div>
 
+  <!--
+    [主內容容器]
+    - 包覆所有服務敘述與選項。
+  -->
   <div class="container">
+    <!-- 說明與優惠提示 -->
     <h2>【其他清洗服務】</h2>
     <p>若您同時有預約以下服務，我們將提供額外優惠：</p>
     <ul>
@@ -112,14 +175,22 @@
     </ul>
     <p>📌 若無需求，可略過此項不選擇，謝謝您！</p>
 
+    <!--
+      [服務卡 1：直立式洗衣機清洗]
+      - radio 單選台數；另以 radio 選洗衣機所在樓層。
+      - 未勾選視為不加購此項。
+    -->
     <div class="service-box">
       <h3>✅ 直立式洗衣機清洗</h3>
       <p>☑️ 拆解零件、細部高壓手工清洗</p>
+
+      <!-- 單選清洗台數 -->
       <label><input type="radio" name="washer" value="1台"> 1 台</label>
       <label><input type="radio" name="washer" value="2台"> 2 台</label>
       <label><input type="radio" name="washer" value="3台"> 3 台</label>
       <label><input type="radio" name="washer" value="4台"> 4 台</label>
 
+      <!-- 補充：位於樓層（同為單選） -->
       <p><strong>直立式洗衣機位於樓層為</strong></p>
       <label><input type="radio" name="washer-floor" value="1F"> 1F</label>
       <label><input type="radio" name="washer-floor" value="2F"> 2F</label>
@@ -127,8 +198,18 @@
       <label><input type="radio" name="washer-floor" value="4F"> 4F</label>
       <label><input type="radio" name="washer-floor" value="5F"> 5F</label>
       <label><input type="radio" name="washer-floor" value="大樓"> 大樓（同一樓層）</label>
+
+      <!--
+        備註：
+        - 若使用者選了 washer（台數），建議前端或後端確保也有選 washer-floor（樓層）。
+        - 本頁僅示範 UI，尚未包含送出前的條件檢查。
+      -->
     </div>
 
+    <!--
+      [服務卡 2：家用水塔清洗（兩噸內）]
+      - radio 單選顆數；未勾選視為不加購。
+    -->
     <div class="service-box">
       <h3>✅ 家用水塔清洗（兩噸內）</h3>
       <p>☑️ 手工長刷搭配清洗，不使用任何藥劑</p>
@@ -139,6 +220,10 @@
       <label><input type="radio" name="watertank" value="5顆"> 5 顆</label>
     </div>
 
+    <!--
+      [服務卡 3：自來水管清洗]
+      - radio 單選戶型方案；未勾選視為不加購。
+    -->
     <div class="service-box">
       <h3>🚿 自來水管清洗服務</h3>
       <p>我們採用食品級天然檸檬酸＋精密高週波設備，進行低壓高流速循環清洗，有效清除水管內部的生物膜、沉積物與雜質，提升用水品質。</p>
@@ -151,8 +236,16 @@
       <label><input type="radio" name="pipe" value="一廚五衛"> 🍽️🚽🚽🚽🚽🚽 一廚五衛：$7200</label>
     </div>
 
+    <!--
+      [服務卡 4：自來水管清洗原因（可複選）]
+      - 同名 checkbox（name="reason"） → 送出時會有多個同名參數。
+      - 「其他原因」勾選時展開 textarea（預設隱藏）。
+      - ✅ 這裡的 textarea 已修正為寬度 100%，左右對齊卡片內文。
+    -->
     <div class="service-box">
       <h3>請問您這次想清洗自來水管的原因是什麼呢？（可複選）</h3>
+
+      <!-- 多選理由（後端需以陣列/多值處理） -->
       <label><input type="checkbox" name="reason" value="異味"> 出水有異味（如鐵鏽味、霉味等）</label>
       <label><input type="checkbox" name="reason" value="混濁"> 水質混濁或有顆粒、沉澱物</label>
       <label><input type="checkbox" name="reason" value="水壓變小"> 水壓變小或出水量減少</label>
@@ -160,30 +253,57 @@
       <label><input type="checkbox" name="reason" value="新屋"> 剛搬新家或新裝修</label>
       <label><input type="checkbox" name="reason" value="健康考量"> 家中成員皮膚過敏或健康考量</label>
       <label><input type="checkbox" name="reason" value="預防性保養"> 預防性保養清洗</label>
+
+      <!-- 其他原因（勾選時展開輸入） -->
       <label>
         <input type="checkbox" id="reason-other" name="reason" value="其他">
         其他原因（請說明）
       </label>
+
+      <!-- ✅ 修正後的 textarea：左右與卡片內容對齊 -->
       <textarea id="other-reason" placeholder="請輸入其他原因..."></textarea>
     </div>
 
+    <!-- 導覽按鈕：回首頁 / 下一步 -->
     <div class="nav-buttons">
       <a href="index.html">回首頁</a>
       <a href="contact.html">下一步 ➜ 【聯繫名稱說明】</a>
     </div>
   </div>
 
+  <!--
+    互動腳本
+    - 需求：勾選「其他原因（請說明）」後展開輸入框；取消勾選則隱藏並清空。
+    - 也會在頁面初次載入時同步狀態（支援返回上一頁的保留狀態）。
+  -->
   <script>
-    // ✅ 勾選其他才顯示輸入框
+    // 在 DOM 解析完成後再掛事件，避免抓不到元素
     document.addEventListener("DOMContentLoaded", () => {
+      // 1) 取得「其他原因」checkbox 與對應 textarea
       const checkbox = document.getElementById("reason-other");
       const textarea = document.getElementById("other-reason");
-      checkbox.addEventListener("change", () => {
-        textarea.style.display = checkbox.checked ? "block" : "none";
-      });
+
+      // 2) 封裝：根據勾選狀態顯示/隱藏輸入框
+      function syncOtherReasonVisibility() {
+        const isChecked = checkbox.checked;               // 是否勾選「其他」
+        textarea.style.display = isChecked ? "block" : "none";
+        if (!isChecked) {
+          textarea.value = "";                            // 隱藏時清空，避免送出殘值
+        }
+      }
+
+      // 3) 初次載入先同步一次（處理瀏覽器返回保留狀態）
+      syncOtherReasonVisibility();
+
+      // 4) 監聽勾選狀態變更事件
+      checkbox.addEventListener("change", syncOtherReasonVisibility);
     });
   </script>
-  <!-- ✅ 改成獨立 JS -->
+
+  <!--
+    外部主題腳本（選用）
+    - 若有 theme.js 用於深/淺色切換（切換 body.dark-mode），可保留；否則可刪除。
+  -->
   <script src="theme.js"></script>
 </body>
 </html>
